added javadoc and sources when publishing

--- a/org.jlibrtp/build.gradle
+++ b/org.jlibrtp/build.gradle
@@ -29,6 +29,11 @@ jar {
     baseName 'org.jlibrtp'
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
